Do i18n for ATAKQuickstartGuide (fi/en)

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -285,9 +285,10 @@
   "serviceTakUsageFlowCard.description4": "<small>Goal: The entire unit is aware of essential events within minutes of their observation.</small>",
 
   "SERVICETAKUSAGEVIEW": "SERVICETAKUSAGEVIEW",
+  "serviceTakUsageView.usageModel": "Usage Model",
   "serviceTakUsageView.navbarTitle": "TAK: Usage",
   "serviceTakUsageView.serviceInfoCardTitle": "TAK - Usage",
-  "serviceTakUsageView.serviceInfoCardDetails": "Take  TAK to use with each platform, according to our standard model, with the instructions below. The easiest way to learn how to do it, is to work <strong>with a partner</strong> where one fighter displays the instructions, and the other follows them.",
+  "serviceTakUsageView.serviceInfoCardDetails": "Take  TAK to use with each platform with the instructions below. <br/> <br/> The easiest way to do it, is to work <strong>with a partner</strong> where one fighter displays the instructions, and the other follows them.",
   "serviceTakUsageView.androidTitle": "Android",
   "serviceTakUsageView.iosTitle": "iOS",
   "serviceTakUsageView.windowsTitle": "Windows",
@@ -298,5 +299,99 @@
   "serviceTakQuickstartView.serviceInfoCardDetails": "Select the setup instructions for your device. <br /><span>The easiest way to learn how to do it, is to work <strong>with a partner</strong> where one fighter displays the instructions, and the other follows them.</span>",
   "serviceTakQuickstartView.androidTitle": "Android",
   "serviceTakQuickstartView.iosTitle": "iOS",
-  "serviceTakQuickstartView.windowsTitle": "Windows"
+  "serviceTakQuickstartView.windowsTitle": "Windows",
+
+  "TAKQUICKSTARTANDROID1": "TAKQUICKSTARTANDROID1",
+  "takQuickstartAndroid1.navbarTitle": "ATAK Quickstart",
+  "takQuickstartAndroid1.statusBarTitle": "Install the applications (1/5)",
+  "takQuickstartAndroid1.serviceInfoCardTitle": "ATAK",
+  "takQuickstartAndroid1.serviceInfoCard.details": "ATAK Quickstart - phase 1: <strong>install the applications</strong><br>Recommendation: Pair up - one displays the instructions, the other follows them.",
+  "takQuickstartAndroid1.unfoldableCard1.title": "1. Download the applications",
+  "takQuickstartAndroid1.unfoldableCard1.description1": "<h3>Download ATAK (1/2)</h3><strong>Download</strong> the ATAK-CIV app from the Play Store and install it. Download link below:",
+  "takQuickstartAndroid1.unfoldableCard1.description2": "<h3>b. Download ATAK Data Sync-plugin (2/2)</h3><strong>Download</strong> the ATAK Data Sync-plugin, and install it. Download link below:",
+  "takQuickstartAndroid1.unfoldableCard2.title": "2. Download your client package",
+  "takQuickstartAndroid1.unfoldableCard2.description1": "Download your client packege from the <strong>front page</strong> of this service by pressing the green <strong>Download your Client Package</strong> button.<br><br>Save the .zip file.",
+  "takQuickstartAndroid1.unfoldableCard2.note": "NOTE! The zip file does not need to be extracted!",
+  "takQuickstartAndroid1.unfoldableCard3.title": "3. Open the ATAK app and grant it the requested permissions",
+  "takQuickstartAndroid1.unfoldableCard3.description1": "Open the app. Grant all permissions the application requests.",
+  "takQuickstartAndroid1.unfoldableCard3.description2": "<em>If the application gives an error message, select Wait.</em>",
+
+  "TAKQUICKSTARTANDROID2": "TAKQUICKSTARTANDROID2",
+  "TakQuickstartAndroid2.navbarTitle": "ATAK Quickstart",
+  "TakQuickstartAndroid2.statusBarTitle": "Import your Client Package (2/5)",
+  "TakQuickstartAndroid2.serviceInfoCard.details": "ATAK Quickstart - phase 2: <strong>Import your Client Package</strong><br>Recommendation: Pair up - one displays the instructions, the other follows them. The ATAK application should be open at this stage.",
+  "TakQuickstartAndroid2.unfoldableCard1.title": "1. In TAK, <strong>Open</strong> the <em>Select Data Package</em> menu.",
+  "TakQuickstartAndroid2.unfoldableCard1.description1": "When opening the app for the first time, the TAK Device Setup appears. <br>Select <strong>Data Package</strong>.",
+  "TakQuickstartAndroid2.unfoldableCard1.description2": "The <strong><em>Select Data Package</em></strong> menu will open.",
+  "TakQuickstartAndroid2.unfoldableCard2.title": "2. <strong>Find</strong> and <strong>select</strong> the message base zip",
+  "TakQuickstartAndroid2.unfoldableCard2.description2": "Find the folder where you downloaded your Client Package file '<strong>Name.zip</strong>' <br>Tip: Press <strong>Date</strong> to see the most recently downloaded file, likely your client package.",
+  "TakQuickstartAndroid2.unfoldableCard2.description3": "Select the file.",
+  "TakQuickstartAndroid2.unfoldableCard3.title": "3. Press <strong>Done</strong> - settings will load",
+  "TakQuickstartAndroid2.unfoldableCard3.description1": "Press <strong>Done</strong>.",
+  "TakQuickstartAndroid2.unfoldableCard3.description2": "You will receive several notifications about the loading of configuration files.",
+  "TakQuickstartAndroid2.unfoldableCard3.description3": "The initial configuration is complete.",
+  "TakQuickstartAndroid2.unfoldableCard3.description4": "Check from the bottom right corner that your server connection has been activated (green light).",
+
+  "TAKQUICKSTARTANDROID3": "TAKQUICKSTARTANDROID3",
+  "TakQuickstartAndroid3.navbarTitle": "ATAK Quickstart",
+  "TakQuickstartAndroid3.statusBarTitle": "Do the settings (3/5)",
+  "TakQuickstartAndroid3.serviceInfoCard.details": "ATAK Quickstart - phase 3: <strong>do the settings</strong><br>Recommendation: Pair up - one displays the instructions, the other follows them. The ATAK application should be open at this stage.",
+  "TakQuickstartAndroid3.unfoldableCard1.title": "1. <strong>Open</strong> Settings",
+  "TakQuickstartAndroid3.unfoldableCard1.description1": "Press the <strong>three lines</strong> (hamburger icon) in the top right corner.",
+  "TakQuickstartAndroid3.unfoldableCard1.description2": "Go to the bottom of the menu, select <strong>Settings</strong>",
+  "TakQuickstartAndroid3.unfoldableCard2.title": "2. <strong>Set</strong> Team and Role",
+  "TakQuickstartAndroid3.unfoldableCard2.description1": "Select <strong>My Team</strong> and choose the color you were instructed to.",
+  "TakQuickstartAndroid3.unfoldableCard2.description2": "Select <strong>My Role.</strong> Unless otherwise specified by your superiors, everybut but command post users use the <strong>Team Member</strong> role.",
+  "TakQuickstartAndroid3.unfoldableCard2.description3": "The role and team are now set.",
+
+  "TAKQUICKSTARTANDROID4": "TAKQUICKSTARTANDROID4",
+  "TakQuickstartAndroid4.navbarTitle": "ATAK Quickstart",
+  "TakQuickstartAndroid4.statusBarTitle": "Enable Data Sync (4/5)",
+  "TakQuickstartAndroid4.serviceInfoCard.details": "ATAK Quickstart - phase 4: <strong>Enable Data Sync</strong><br>Recommendation: Pair up - one displays the instructions, the other follows them. The ATAK application should be open at this stage.",
+  "TakQuickstartAndroid4.unfoldableCard1.title": "1. Open the Data Sync menu",
+  "TakQuickstartAndroid4.unfoldableCard1.step1": "a. In the main view, open the <strong>hamburger menu</strong> and find <strong>Plugins</strong>. Note that you need to have the Data Sync plugin installed from Google Play at this point.",
+  "TakQuickstartAndroid4.unfoldableCard1.step2": "b. The Plugins menu opens. Press on the line for <em>Data Sync</em> where it says \"Status: <strong>Not loaded</strong>.\"",
+  "TakQuickstartAndroid4.unfoldableCard1.step3": "c. The app asks if you want to load <em>Data Sync</em>. Press <strong>Load.</strong>",
+  "TakQuickstartAndroid4.unfoldableCard1.step4": "d. The status of Data Sync changes to <strong>Loaded</strong> state.",
+  "TakQuickstartAndroid4.unfoldableCard1.step5": "Ready! You can exit the menu.",
+  "TakQuickstartAndroid4.unfoldableCard2.title": "2. Enable Recon Feed & other Feeds",
+  "TakQuickstartAndroid4.unfoldableCard2.step1": "In the main view, again open the three lines menu (hamburger menu).",
+  "TakQuickstartAndroid4.unfoldableCard2.step2": "Find <strong>Data Sync</strong> in the menu and select it.",
+  "TakQuickstartAndroid4.unfoldableCard2.step3": "Opening the Data Sync menu reveals feeds available from the server.",
+  "TakQuickstartAndroid4.unfoldableCard2.step4": "Select the feed(s) you've been ordered to subscribe (in the picture <strong>RECON</strong>).",
+  "TakQuickstartAndroid4.unfoldableCard2.step5": "From the popup window, select <strong>Download & Sync</strong>.",
+  "TakQuickstartAndroid4.unfoldableCard2.step6": "<strong>Recon Feed</strong> is now enabled. You will receive markers on your map from the command post.",
+  "TakQuickstartAndroid4.unfoldableCard2.note": "Detailed instructions on using the feed are in the <strong>Usage Guide.</strong> ",
+  "TakQuickstartAndroid4.unfoldableCard3.title": "3. Turn Auto Download on",
+  "TakQuickstartAndroid4.unfoldableCard3.step1": "Ensure Auto Download is on. Return to the main view of the hamburger menu (three lines at the top right).<br><br>Find <strong>Settings</strong>.",
+  "TakQuickstartAndroid4.unfoldableCard3.step2": "Find the <strong>Auto Download Updates</strong> setting and ensure it is turned on.",
+  "TakQuickstartAndroid4.unfoldableCard3.step3": "This setting ensures that ATAK automatically downloads updates for your subscribed feeds.",
+
+  "TAKQUICKSTARTANDROID5": "TAKQUICKSTARTANDROID5",
+  "TakQuickstartAndroid5.navbarTitle": "ATAK Quickstart",
+  "TakQuickstartAndroid5.statusBarTitle": "Check Units and Map if Necessary (5/5)",
+  "TakQuickstartAndroid5.serviceInfoCard.details": "ATAK Quickstart - phase 5: <strong>Check units, callsign, and map as necessary.</strong><br><br>These settings should be automatically set correctly by your installed Client Package. Check or change them if you wish.",
+  "TakQuickstartAndroid5.unfoldableCard1.title": "<strong>Select</strong> your preferred map base",
+  "TakQuickstartAndroid5.unfoldableCard1.description1": "If you want to select a map base (various options available), do the following.<br>Select <strong>Maps</strong> from the toolbar (top right corner).",
+  "TakQuickstartAndroid5.unfoldableCard1.description2": "Acknowledge a few notifications with <strong>OK</strong>.",
+  "TakQuickstartAndroid5.unfoldableCard1.description3": "Choose the <strong>Mobile</strong> tab and activate the <strong>02 Google Hybrid</strong> map base.",
+  "TakQuickstartAndroid5.unfoldableCard1.description4": "Exit the menu by pressing the <strong>Back</strong> button a few times.",
+  "TakQuickstartAndroid5.unfoldableCard2.title": "<strong>Check</strong> units if necessary",
+  "TakQuickstartAndroid5.unfoldableCard2.description1": "In ATAK, the unit settings should be set by your installed Client Package. Check them if necessary as follows.<br><br>a. Return to the <strong>Settings</strong> main menu, by backing out.<br><br>b. Select <em>Display Preferences</em>.",
+  "TakQuickstartAndroid5.unfoldableCard2.description2": "c. Select <em>Basic Display Preferences</em>.",
+  "TakQuickstartAndroid5.unfoldableCard2.description3": "d. Select <em>Unit Display Format Preferences</em>.",
+  "TakQuickstartAndroid5.unfoldableCard2.description4": "e. Choose <em>Altitude Units</em>.",
+  "TakQuickstartAndroid5.unfoldableCard2.description5": "f. <strong>Change</strong> to <strong>Meters (m)</strong>.",
+  "TakQuickstartAndroid5.unfoldableCard2.description6": "g. Select <strong>Speed Units</strong> and choose <strong>KM per Hour (kmph)</strong>",
+  "TakQuickstartAndroid5.unfoldableCard2.description7": "h. Select units as <strong>KM per Hour (kmph)</strong>",
+  "TakQuickstartAndroid5.unfoldableCard2.description8": "j. Scroll down to <strong>UNIT THRESHOLD</strong>. Select <strong>Meters to Kilometers.</strong>",
+  "TakQuickstartAndroid5.unfoldableCard2.description9": "i. Change to <strong>1000</strong>. Press <strong>OK.</strong>",
+  "TakQuickstartAndroid5.unfoldableCard2.description15": "Units are now set. Exit the menu by pressing the back button several times.",
+  "TakQuickstartAndroid5.unfoldableCard3.title": "Check and change the <strong>Callsign</strong> if necessary",
+  "TakQuickstartAndroid5.unfoldableCard3.description1": "Your callsign in ATAK should be set by your installed Client Package. If you need to change it, do it like this.<br><br>Select <strong>Callsign and Device Preferences.</strong>",
+  "TakQuickstartAndroid5.unfoldableCard3.description2": "Select <strong>Callsign Preferences.</strong>",
+  "TakQuickstartAndroid5.unfoldableCard3.description4": "Select <strong>My Callsign.</strong>",
+  "TakQuickstartAndroid5.unfoldableCard3.description5": "Enter the callsign you were assigned - for example, <strong>Rambo</strong>.",
+  "TakQuickstartAndroid5.unfoldableCard3.description7": "Press <strong>OK.</strong>",
+  "TakQuickstartAndroid5.alterForward": "Done! Go back."
 }
