--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -283,6 +283,7 @@
   "serviceTakUsageFlowCard.description4": "<small>Tavoitetila: Koko joukko tietää olennaiset tapahtumat minuuttien kuluessa niiden havaitsemisesta.</small>",
 
   "SERVICETAKUSAGEVIEW": "SERVICETAKUSAGEVIEW",
+  "serviceTakUsageView.usageModel": "Käyttömalli",
   "serviceTakUsageView.navbarTitle": "TAK: Käyttö joukossa",
   "serviceTakUsageView.serviceInfoCardTitle": "TAK - Käyttö joukossa",
   "serviceTakUsageView.serviceInfoCardDetails": "Ota TAK perusmallin mukaiseen käyttöön kullekin alustalle alla olevien ohjeiden avulla. Helpoin tapa tehdä käyttöönotto on <strong>parin kanssa</strong> siten, että toinen taistelija näyttää ohjetta ja toinen tekee.",
@@ -296,5 +297,99 @@
   "serviceTakQuickstartView.serviceInfoCardDetails": "Valitse käyttöönotto-ohje laitteesi mukaan. <br /><span>Helpoin tapa tehdä käyttöönotto on <strong>parin kanssa</strong> siten, että toinen taistelija näyttää ohjetta ja toinen tekee.</span>",
   "serviceTakQuickstartView.androidTitle": "Android",
   "serviceTakQuickstartView.iosTitle": "iOS",
-  "serviceTakQuickstartView.windowsTitle": "Windows"
+  "serviceTakQuickstartView.windowsTitle": "Windows",
+
+  "TAKQUICKSTARTANDROID1": "TAKQUICKSTARTANDROID1",
+  "takQuickstartAndroid1.navbarTitle": "ATAK käyttöönotto",
+  "takQuickstartAndroid1.statusBarTitle": "Asenna sovellukset (1/5)",
+  "takQuickstartAndroid1.serviceInfoCardTitle": "ATAK",
+  "takQuickstartAndroid1.serviceInfoCard.details": "ATAK käyttöönotto - vaihe 1: <strong>asenna sovellukset</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee.",
+  "takQuickstartAndroid1.unfoldableCard1.title": "1. Lataa sovellukset",
+  "takQuickstartAndroid1.unfoldableCard1.description1": "<h3>Lataa ATAK (1/2)</h3><strong>Lataa</strong> ATAK-CIV-sovellus Play Storesta ja asenna se. Latauslinkki alla, <strong>paina</strong>:",
+  "takQuickstartAndroid1.unfoldableCard1.description2": "<h3>b. Lataa ATAK Data Sync-plugin (2/2)</h3><strong>Lataa</strong> ATAK Data Sync-plugin, ja asenna se. Latauslinkki alla, <strong>paina</strong>:",
+  "takQuickstartAndroid1.unfoldableCard2.title": "2. Lataa viestiperusteet",
+  "takQuickstartAndroid1.unfoldableCard2.description1": "Lataa tämän palvelun <strong>etusivulta</strong> viestiperusteet painamalla vihreää <strong>Lataa viestiperustepaketti</strong>-nappia.<br><br>Tallenna .zip-tiedosto.",
+  "takQuickstartAndroid1.unfoldableCard2.note": "HUOMAA! Zip-tiedostoa ei tarvitse purkaa!",
+  "takQuickstartAndroid1.unfoldableCard3.title": "3. Avaa sovellus ja anna sille sen kysymät oikeudet",
+  "takQuickstartAndroid1.unfoldableCard3.description1": "Avaa sovellus. Anna kaikki oikeudet, mitä applikaatio pyytää.",
+  "takQuickstartAndroid1.unfoldableCard3.description2": "<em>Jos applikaatio antaa virheilmoituksen, valitse Wait.</em>",
+
+  "TAKQUICKSTARTANDROID2": "TAKQUICKSTARTANDROID2",
+  "TakQuickstartAndroid2.navbarTitle": "ATAK käyttöönotto",
+  "TakQuickstartAndroid2.statusBarTitle": "Aseta viestiperusteet (2/5)",
+  "TakQuickstartAndroid2.serviceInfoCard.details": "ATAK käyttöönotto - vaihe 2: <strong>aseta viestiperusteet</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee. Tässä vaiheessa ATAK-sovelluksen tulee olla auki.",
+  "TakQuickstartAndroid2.unfoldableCard1.title": "1. <strong>Avaa</strong> <em>Select Data Package</em> -valikko",
+  "TakQuickstartAndroid2.unfoldableCard1.description1": "Avatessa sovellus ensimmäistä kertaa, aukeaa TAK Device Setup. <br>Valitse <strong>Data Package</strong>.",
+  "TakQuickstartAndroid2.unfoldableCard1.description2": "<strong><em>Select Data Package</em></strong>-valikko aukeaa.",
+  "TakQuickstartAndroid2.unfoldableCard2.title": "2. <strong>Etsi</strong> ja <strong>valitse</strong> viestiperuste-zip",
+  "TakQuickstartAndroid2.unfoldableCard2.description2": "Etsi kansio, johon latasit viestiperustetiedostosi <strong>Nimi.zip</strong><br>Vinkki: Paina <strong>Date</strong> nähdäksesi viimeisimpänä ladatun tiedoston, todennäköisesti viestiperusteesi.",
+  "TakQuickstartAndroid2.unfoldableCard2.description3": "Valitse tiedosto.",
+  "TakQuickstartAndroid2.unfoldableCard3.title": "3. Paina <strong>Done</strong> - asetukset latautuu",
+  "TakQuickstartAndroid2.unfoldableCard3.description1": "Paina <strong>Done</strong>.",
+  "TakQuickstartAndroid2.unfoldableCard3.description2": "Saat muutaman ilmoituksen konfiguraatiotiedostojen latautumisesta.",
+  "TakQuickstartAndroid2.unfoldableCard3.description3": "Alkukonfiguraatio on valmis.",
+  "TakQuickstartAndroid2.unfoldableCard3.description4": "Tarkista oikeasta alakulmasta, että palvelinyhteytesi on aktivoitunut (vihreä merkkivalo).",
+
+  "TAKQUICKSTARTANDROID3": "TAKQUICKSTARTANDROID3",
+  "TakQuickstartAndroid3.navbarTitle": "ATAK käyttöönotto",
+  "TakQuickstartAndroid3.statusBarTitle": "Tee asetukset (3/5)",
+  "TakQuickstartAndroid3.serviceInfoCard.details": "ATAK käyttöönotto - vaihe 3: <strong>tee asetukset</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee. Tässä vaiheessa ATAK-sovelluksen tulee olla auki.",
+  "TakQuickstartAndroid3.unfoldableCard1.title": "1. <strong>Avaa</strong> Settings",
+  "TakQuickstartAndroid3.unfoldableCard1.description1": "Paina oikeassa yläkulmassa olevaa <strong>kolmea viivaa</strong> (hampurilaispainike).",
+  "TakQuickstartAndroid3.unfoldableCard1.description2": "Mene valikon alareunaan, valitse <strong>Settings</strong>",
+  "TakQuickstartAndroid3.unfoldableCard2.title": "3. <strong>Aseta</strong> Team ja Role",
+  "TakQuickstartAndroid3.unfoldableCard2.description1": "Valitse <strong>My Team</strong> ja valitse sinulle käsketty väri.",
+  "TakQuickstartAndroid3.unfoldableCard2.description2": "Valitse <strong>My Role.</strong> Kaikki paitsi komentopaikka käyttävät <strong>Team Member</strong>-roolia.",
+  "TakQuickstartAndroid3.unfoldableCard2.description3": "Rooli ja tiimi on nyt asetettu.",
+
+  "TAKQUICKSTARTANDROID4": "TAKQUICKSTARTANDROID4",
+  "TakQuickstartAndroid4.navbarTitle": "ATAK käyttöönotto",
+  "TakQuickstartAndroid4.statusBarTitle": "Ota käyttöön Data Sync (4/5)",
+  "TakQuickstartAndroid4.serviceInfoCard.details": "ATAK käyttöönotto - vaihe 4: <strong>Ota käyttöön Data Sync</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee. Tässä vaiheessa ATAK-sovelluksen tulee olla auki.",
+  "TakQuickstartAndroid4.unfoldableCard1.title": "1. Avaa Data Sync-valikko",
+  "TakQuickstartAndroid4.unfoldableCard1.step1": "a. Päänäkymässä, avaa <strong>hampurilaisvalikko</strong> ja etsi <strong>Plugins.</strong>",
+  "TakQuickstartAndroid4.unfoldableCard1.step2": "b. Plugins-valikko avautuu. Paina <em>Data Syncin</em> riviltä kohtaa \"Status: <strong>Not loaded</strong>.\"",
+  "TakQuickstartAndroid4.unfoldableCard1.step3": "c. Sovellus kysyy, ladataanko <em>Data Sync</em> käyttöön. Paina <strong>Load.</strong>",
+  "TakQuickstartAndroid4.unfoldableCard1.step4": "d. Data Syncin status muuttuu <strong>Loaded</strong>-tilaan.",
+  "TakQuickstartAndroid4.unfoldableCard1.step5": "Valmis! Voit poistua valikosta.",
+  "TakQuickstartAndroid4.unfoldableCard2.title": "2. Ota käyttöön Recon Feed",
+  "TakQuickstartAndroid4.unfoldableCard2.step1": "Päänäkymässä, avaa jälleen kolme viivaa-valikko (hampurilaisvalikko).",
+  "TakQuickstartAndroid4.unfoldableCard2.step2": "Etsi valikosta <strong>Data Sync</strong> ja valitse se.",
+  "TakQuickstartAndroid4.unfoldableCard2.step3": "Avaamalla Data Sync-valikon, avautuu näkymä, jossa palvelimelta saatavilla olevat syötteet (feedit).",
+  "TakQuickstartAndroid4.unfoldableCard2.step4": "Valitse ohjeistettu syöte (kuvassa <strong>RECON</strong>).",
+  "TakQuickstartAndroid4.unfoldableCard2.step5": "Valitse aukeavasta ikkunasta <strong>Download & Sync</strong>.",
+  "TakQuickstartAndroid4.unfoldableCard2.step6": "<strong>Recon Feed</strong> on nyt käytössä. Saat siitä merkkejä kartallesi komentopaikalta.",
+  "TakQuickstartAndroid4.unfoldableCard2.note": "Tarkemmat ohjeet feedin käytöstä <strong>Käyttö joukossa</strong>-ohjeissa.",
+  "TakQuickstartAndroid4.unfoldableCard3.title": "3. Aseta Auto Download päälle",
+  "TakQuickstartAndroid4.unfoldableCard3.step1": "Varmistetaan, että Auto Download on päällä. Palaa hampurilaisvalikon päänäkymään (kolme viivaa oikealla ylhäällä).<br><br>Etsi <strong>Settings</strong>.",
+  "TakQuickstartAndroid4.unfoldableCard3.step2": "Etsi asetus <strong>Auto Download Updates</strong> ja varmistu, että se on päällä.",
+  "TakQuickstartAndroid4.unfoldableCard3.step3": "Asetuksesta seuraa, että ATAK lataa automaattisesti päivitykset tilaamiisi feedeihin.",
+
+  "TAKQUICKSTARTANDROID5": "TAKQUICKSTARTANDROID5",
+  "TakQuickstartAndroid5.navbarTitle": "ATAK käyttöönotto",
+  "TakQuickstartAndroid5.statusBarTitle": "Tarkasta tarvittaessa mittayksiköt ja kartta (5/5)",
+  "TakQuickstartAndroid5.serviceInfoCard.details": "ATAK käyttöönotto - vaihe 5: <strong>Tarkista tarvittaessa mittayksiköt, callsign ja kartta.</strong><br><br>Näiden asetusten tulisi olla viestiperusteiden asettamisen jälkeen kunnossa. Tarkista tai muuta niitä halutessasi.",
+  "TakQuickstartAndroid5.unfoldableCard1.title": "<strong>Valitse</strong> haluamasi karttapohja",
+  "TakQuickstartAndroid5.unfoldableCard1.description1": "Mikäli haluat valita karttapohjan (eri vaihtoehtoja saatavilla), toimi seuraavasti.<br>Valitse työkalurivistä (oikea yläkulma) <strong>Kartat</strong>.",
+  "TakQuickstartAndroid5.unfoldableCard1.description2": "Hyväksy muutama ilmoitus <strong>OK</strong>:lla.",
+  "TakQuickstartAndroid5.unfoldableCard1.description3": "Valitse <strong>Mobile</strong> välilehdeltä <strong>02 Google Hybrid</strong>. Karttapohja aktivoituu.",
+  "TakQuickstartAndroid5.unfoldableCard1.description4": "Poistu valikosta painamalla muutaman kerran <strong>Back</strong>-nappia.",
+  "TakQuickstartAndroid5.unfoldableCard2.title": "<strong>Tarkista</strong> tarvittaessa mittayksiköt",
+  "TakQuickstartAndroid5.unfoldableCard2.description1": "Android ATAKissa mittayksikköasetukset tulevat perustepaketista. Tarkista ne tarvittaessa seuraavasti.<br><br>a. Palaa takaisin <strong>Settings</strong>-päävalikkoon peruuttamalla.<br><br>b. Valitse <em>Display Preferences</em>.",
+  "TakQuickstartAndroid5.unfoldableCard2.description2": "c. Valitse <em>Basic Display Preferences</em>.",
+  "TakQuickstartAndroid5.unfoldableCard2.description3": "d. Valitse <em>Unit Display Format Preferences</em>.",
+  "TakQuickstartAndroid5.unfoldableCard2.description4": "e. Valitse <em>Altitude Units</em>.",
+  "TakQuickstartAndroid5.unfoldableCard2.description5": "f. <strong>Vaihda</strong> yksiköksi <strong>Meters (m)</strong>.",
+  "TakQuickstartAndroid5.unfoldableCard2.description6": "g. Valitse <strong>Speed Units</strong>, ja valitse yksiköksi <strong>KM per Hour (kmph)</strong>",
+  "TakQuickstartAndroid5.unfoldableCard2.description7": "h. valitse yksiköksi <strong>KM per Hour (kmph)</strong>",
+  "TakQuickstartAndroid5.unfoldableCard2.description8": "j. Vieritä valikko alas kohtaan <strong>UNIT THRESHOLD</strong>. Valitse yksiköksi <strong>Meters to Kilometers.</strong>",
+  "TakQuickstartAndroid5.unfoldableCard2.description9": "i. Vaihda arvoksi <strong>1000</strong>. Paina <strong>OK.</strong>",
+  "TakQuickstartAndroid5.unfoldableCard2.description15": "Mittayksiköt ovat nyt asetettu. Poistu valikosta painamalla back-nappia useita kertoja.",
+  "TakQuickstartAndroid5.unfoldableCard3.title": "Tarkista ja vaihda tarvittaessa <strong>Callsign</strong>",
+  "TakQuickstartAndroid5.unfoldableCard3.description1": "Peitenimesi Android ATAKissa tulee perustepaketissa. Mikäli sinun tarvitsee vaihtaa se, se tapahtuu näin.<br><br>Valitse <strong>Callsign and Device Preferences.</strong>",
+  "TakQuickstartAndroid5.unfoldableCard3.description2": "Valitse <strong>Callsign Preferences.</strong>",
+  "TakQuickstartAndroid5.unfoldableCard3.description4": "Valitse <strong>My Callsign.</strong>",
+  "TakQuickstartAndroid5.unfoldableCard3.description5": "Anna omaksi tunnukseksi <strong>sinulle käsketty peite,</strong> esimerkiksi <em>Rambo</em>.",
+  "TakQuickstartAndroid5.unfoldableCard3.description7": "Paina <strong>OK.</strong>",
+  "TakQuickstartAndroid5.alterForward": "Valmis! Palaa tästä."
 }
